# tolokaindex

./: .gitignore  README.md  manage.py  pyproject.toml  todo
tolokaindex/: asgi.py  settings.py  urls.py  wsgi.py
tolokaindex/apps/posts/: __init__.py  admin.py  apps.py  models.py  signals.py
tolokaindex/apps/posts/management/commands/: parseposts.py  showsorted.py
tolokaindex/apps/posts/migrations/: 0001_initial.py  0002_title_language.py  0003_postseason_postseries.py
tolokaindex/apps/raw_posts/: apps.py  grabbers.py  models.py
tolokaindex/apps/raw_posts/management/commands/: fetchnewerposts.py
tolokaindex/apps/raw_posts/migrations/: 0001_initial.py
tolokaindex/utils/: base_model.py  langdetector.py
