[tool.poetry]
name = "tolokaindex"
version = "0.1.0"
description = ""
authors = ["adr-007 <adr-007@ukr.net>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
requests = "^2.23.0"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]
django-stubs = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
